RESULTS/AutoSpec/raw_results/out-4o-sv-comp-mx/out/array_true-unreach-call1_infilled_0003/array_true-unreach-call1_infilled_merged.txt
/home/dimpling/AutoSpec/out/array_true-unreach-call1_infilled_0003/array_true-unreach-call1_infilled_merged.c:15:3: error: unterminated comment
   15 |   /*@
      |   ^
cc1: note: unrecognized command-line option ‘-Wno-unknown-warning-option’ may have been intended to silence earlier diagnostics
